# resume-generator

./: .env.example  .gitignore  README.md  generator.py  pyproject.toml  resume.py
